# openapi/openapi.yaml
@@ -17,6 +17,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Task'
+        '500':
+          description: Server internal error
     post:
       summary: Create a new task
       tags:
@@ -35,21 +37,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
-  /tasks/{id}:
+        '400':
+          description: Input error, request body is incorrect
+        '500':
+          description: Internal server error
+  /tasks/{task_id}:
     patch:
-      summary: Update an existing task
+      summary: Update task
       tags:
         - tasks
       parameters:
-        - name: id
+        - name: task_id
           in: path
           required: true
-          description: The task ID
           schema:
             type: integer
             format: uint
       requestBody:
-        description: The task fields to update
+        description: Data for update
         required: true
         content:
           application/json:
@@ -57,28 +62,112 @@ paths:
               $ref: '#/components/schemas/Task'
       responses:
         '200':
-          description: The updated task
+          description: Task updated
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
+        '400':
+          description: Invalid input, request body is incorrect
+        '404':
+          description: Task not found
+        '500':
+          description: Internal server error
     delete:
-      summary: Delete an existing task
+      summary: Delete task
       tags:
         - tasks
       parameters:
-        - name: id
+        - name: task_id
           in: path
           required: true
-          description: The task ID
           schema:
             type: integer
             format: uint
       responses:
         '204':
-          description: No content, task deleted
+          description: Task deleted successfully (no content)
         '404':
           description: Task not found
+        '500':
+          description: Internal server error
+
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+
+  /users/{user_id}:
+    patch:
+      summary: Update user by ID
+      tags:
+        - users
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        description: Data for update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: User updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+    delete:
+      summary: Delete user by ID
+      tags:
+        - users
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '204':
+          description: User deleted
+        '404':
+          description: User not found
+
 components:
   schemas:
     Task:
@@ -91,3 +180,13 @@ components:
           type: string
         is_done:
           type: boolean
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password:
+          type: string
